working digital clock

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <h1>Welcome to a simple Digital Clock</h1>
     <div class="clock">
-        <div class="hour">12</div>
+        <div id="hour" class="hour">12</div>
         <div class="seperator"></div>
-        <div class="minute">34</div>
+        <div id="minute" class="minute">34</div>
         <div class="seperator"></div>
-        <div class="second">56</div>
-        <div class="meridian"></div>
+        <div id="second" class="second">56</div>
+        <div id="meridian" class="meridian">am</div>
     </div>
 </body>
 </html>
